--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -1,3 +1,6 @@
+@import "_mixins.scss";
+@import "../../../../libraries/bootstrap_sass/vendor/assets/stylesheets/bootstrap.scss";
+
 ul.nav {
 
   li {
