--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -4989,3 +4989,74 @@ button.close {
     display: none !important; } }
 ul.nav li {
   cursor: pointer; }
+
+/* ===== Footer ===== */
+footer {
+  margin-top: 60px;
+  padding: 20px 0;
+  background: #3E7A8C;
+  color: white;
+  font-weight: 300; }
+  footer a {
+    color: #81D685; }
+    footer a:hover {
+      color: #81D685;
+      text-decoration: none; }
+  footer .headline {
+    border-bottom: 1px dotted white;
+    margin-bottom: 20px; }
+    footer .headline h3 {
+      text-transform: uppercase;
+      font-weight: 100; }
+  footer .btn-default {
+    color: #fff;
+    background: none; }
+    footer .btn-default:hover {
+      color: #3E7A8C;
+      background: #fff;
+      font-weight: bold;
+      border: 1px solid #fff; }
+  footer .form-control {
+    border: white; }
+    footer .form-control:focus {
+      border: white; }
+  footer .sbtn {
+    margin-bottom: 5px; }
+
+.legal {
+  padding: 20px 0 10px 0;
+  background: #386F80;
+  color: white;
+  font-weight: 300; }
+  .legal a {
+    color: #81D685;
+    text-decoration: none; }
+
+.social ul {
+  background: #3E7A8C;
+  color: white;
+  font-size: 24px;
+  margin: 0;
+  padding: 0; }
+  .social ul li {
+    float: left;
+    display: block;
+    list-style-type: none;
+    width: 28px;
+    height: 28px;
+    background: #eee;
+    margin: 0 5px 5px 0;
+    text-align: center;
+    line-height: 28px;
+    transition: background 0.1s;
+    -webkit-transition: background 0.1s;
+    -moz-transition: background 0.1s; }
+    .social ul li:hover {
+      background: none; }
+      .social ul li:hover a {
+        color: #fff; }
+    .social ul li a {
+      color: #3E7A8C;
+      transition: color 0.1s;
+      -webkit-transition: color 0.1s;
+      -moz-transition: color 0.1s; }
