--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -7,3 +7,111 @@ ul.nav {
     cursor: pointer;
   }
 }
+
+
+
+
+/* ===== Footer ===== */
+
+footer {
+  margin-top: 60px;
+  padding: 20px 0;
+  background: #3E7A8C;
+  color: white;
+  font-weight: 300;
+
+  a {
+    color: #81D685;
+
+    &:hover {
+      color: #81D685;
+      text-decoration: none;
+    }
+  }
+
+  .headline {
+    border-bottom: 1px dotted white;
+    margin-bottom: 20px;
+
+    h3 {
+      text-transform: uppercase;
+      font-weight: 100;
+    }
+  }
+
+  .btn-default {
+    color: #fff;
+    background: none;
+
+    &:hover {
+      color: #3E7A8C;
+      background: #fff;
+      font-weight: bold;
+      border: 1px solid #fff;
+    }
+  }
+
+  .form-control {
+    border: white;
+
+    &:focus {
+      border: white;
+    }
+  }
+
+  .sbtn {
+    margin-bottom: 5px;
+  }
+}
+
+.legal {
+  padding: 20px 0 10px 0;
+  background: #386F80;
+  color: white;
+  font-weight: 300;
+
+  a {
+    color: #81D685;
+    text-decoration: none;
+  }
+}
+
+.social {
+  ul {
+    background: #3E7A8C;
+    color: white;
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+
+    li {
+      float: left;
+      display: block;
+      list-style-type: none;
+      width: 28px;
+      height: 28px;
+      background: #eee;
+      margin: 0 5px 5px 0;
+      text-align: center;
+      line-height: 28px;
+      transition: background 0.1s;
+      -webkit-transition: background 0.1s;
+      -moz-transition: background 0.1s;
+
+      &:hover {
+        background: none;
+
+        a {
+          color: #fff;
+        }
+      }
+
+      a {
+        color: #3E7A8C;
+        transition: color 0.1s;
+        -webkit-transition: color 0.1s;
+        -moz-transition: color 0.1s;
+      }
+    }
+  }
+}
