--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -1,9 +1,165 @@
 @import "_mixins.scss";
 @import "../../../../libraries/bootstrap_sass/vendor/assets/stylesheets/bootstrap.scss";
+@import "../fonts/font-awesome-4.0.3/css/font-awesome.css";
+@import "pages/_homepage.scss";
 
-ul.nav {
+/* ===== General ===== */
 
-  li {
-    cursor: pointer;
+html, body {
+  font-family: 'Lato', sans-serif;
+  height: 100%;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Lato', sans-serif;
+}
+h1.hl, h2.hl, h3.hl, h4.hl, h5.hl, h6.hl {
+  color: #515151;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
+  text-transform: none;
+}
+
+/* ===== Top Menu ===== */
+
+header.navbar {
+  margin: 0;
+
+  ul.nav {
+
+    li {
+      cursor: pointer;
+
+      &.dropdown {
+
+        ul.dropdown-menu {
+          border-top-color: #EEEEEE;
+          @include box-shadow(none);
+
+          li {
+
+            a {
+              padding: 10px 20px;
+            }
+          }
+        }
+
+        &.open {
+
+          .dropdown-toggle {
+            background-color: #EEEEEE;
+            color: #515151;
+          }
+        }
+      }
+    }
   }
 }
+
+/* ===== Footer ===== */
+
+footer {
+  margin-top: 60px;
+  padding: 20px 0;
+  background: #3E7A8C;
+  color: white;
+  font-weight: 300;
+
+  a {
+    color: #81D685;
+
+    &:hover {
+      color: #81D685;
+      text-decoration: none;
+    }
+  }
+
+  .headline {
+    border-bottom: 1px dotted white;
+    margin-bottom: 20px;
+
+    h3 {
+      text-transform: uppercase;
+      font-weight: 100;
+    }
+  }
+
+  .btn-default {
+    color: #fff;
+    background: none;
+
+    &:hover {
+      color: #3E7A8C;
+      background: #fff;
+      font-weight: bold;
+      border: 1px solid #fff;
+    }
+  }
+
+  .form-control {
+    border: white;
+
+    &:focus {
+      border: white;
+    }
+  }
+
+  .sbtn {
+    margin-bottom: 5px;
+  }
+}
+
+.legal {
+  padding: 20px 0 10px 0;
+  background: #386F80;
+  color: white;
+  font-weight: 300;
+
+  a {
+    color: #81D685;
+    text-decoration: none;
+  }
+}
+
+.social {
+  ul {
+    background: #3E7A8C;
+    color: white;
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+
+    li {
+      float: left;
+      display: block;
+      list-style-type: none;
+      width: 28px;
+      height: 28px;
+      background: #eee;
+      margin: 0 5px 5px 0;
+      text-align: center;
+      line-height: 28px;
+      transition: background 0.1s;
+      -webkit-transition: background 0.1s;
+      -moz-transition: background 0.1s;
+
+      &:hover {
+        background: none;
+
+        a {
+          color: #fff;
+        }
+      }
+
+      a {
+        color: #3E7A8C;
+        transition: color 0.1s;
+        -webkit-transition: color 0.1s;
+        -moz-transition: color 0.1s;
+      }
+    }
+  }
+}
+
+
