--- a/apps/app/views/main.html
+++ b/apps/app/views/main.html
@@ -1,3 +1,2 @@
-<!--<h1>Boxes</h1>-->
-<!--<pre>{{ boxes }}</pre>-->
-<gauge></gauge>
+hello<br />
+<leaflet width="640px" height="480px"></leaflet>
