--- a/apps/app/css/main.css
+++ b/apps/app/css/main.css
@@ -50,7 +50,56 @@ main.scss:3
 /usr/local/bin/scss:19:in `load'
 /usr/local/bin/scss:19
 */
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: File to import not found or unreadable: bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.\A               Load path: /var/www/IBLI/apps/app/styles\A         on line 3 of main.scss\A \A 1: $icon-font-path: \"/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/\";\A 2: \A 3: @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';\A 4: \A 5: // bower:scss\A 6: @import \"../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss\";\A 7: // endbower\A 8: "; }
+
+/* Leaflet */
+html {
+  font-family: sans-serif;
+}
+
+body, html { height: 100%; }
+
+.info {
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+}
+
+.legend {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  font-weight: bold;
+  line-height: 18px;
+  color: #555;
+}
+
+.legend i {
+  clear: both;
+  width: 16px;
+  height: 16px;
+  float: left;
+  opacity: 0.7;
+  margin-right: 8px;
+}
+
+div.box {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  z-index: 100;
+  padding: 1em;
+  text-align: center;
+}
+
+div.country {
+  font-size: 2em;
+  font-weight: bold;
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
+  z-index: 100;
+  padding: .2em .5em;
+  line-height: 1.1em;
+  text-align: center;
+}
