--- a/apps/app/views/main.html
+++ b/apps/app/views/main.html
@@ -1,3 +1,3 @@
 <h1>Hi </h1>
-  {{ center }}
-<leaflet center="kenya" legend="legend" height="480px" width="640px"></leaflet>
+{{ geojson }}
+<leaflet center="usa" legend="legend" height="680px" width="840px"></leaflet>
