--- a/apps/app/views/main.html
+++ b/apps/app/views/main.html
@@ -1,3 +1,3 @@
 <h1>Hi </h1>
-{{ geojson }}
-<leaflet center="usa" legend="legend" height="680px" width="840px"></leaflet>
+<leaflet center="usa" legend="legend" tiles='tile' height="680px" geojson="geojson" width="840px"></leaflet>
+<pre>{{ geojson | json }}</pre>
