Kenya JSON & Remove helpers and debugs

--- a/apps/app/views/main.html
+++ b/apps/app/views/main.html
@@ -1,2 +1,1 @@
-<h1>Hi </h1>
-<leaflet center="usa" legend="legend" tiles='tile' height="680px" geojson="geojson" width="840px"></leaflet>
+<leaflet center="kenya" legend="legend" tiles='tile' height="680px" geojson="geojson" width="840px"></leaflet>
