fix coords - now kenya is shown well!

--- a/apps/app/views/main.html
+++ b/apps/app/views/main.html
@@ -1,1 +1,1 @@
-<leaflet center="kenya" legend="legend" tiles='tile' height="680px" geojson="geojson" width="840px"></leaflet>
+<leaflet center="kenya" tiles="tiles" geojson="geojson" width="840" height="780"></leaflet>
