--- a/apps/app/styles/main.scss
+++ b/apps/app/styles/main.scss
@@ -105,11 +105,13 @@ body {
   padding: 6px 8px;
   line-height: 18px;
   color: #555;
-}
-.legend i {
-  width: 16px;
-  height: 16px;
-  float: left;
-  margin-right: 8px;
-  opacity: 0.7;
+  min-width: 130px;
+
+  i {
+    width: 16px;
+    height: 16px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+  }
 }
