--- a/apps/app/styles/main.scss
+++ b/apps/app/styles/main.scss
@@ -115,3 +115,14 @@ body {
     opacity: 0.7;
   }
 }
+
+hover-info.leaflet-control {
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: rgba(255,255,255, 0.9);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 6px 8px;
+  line-height: 18px;
+  color: #555;
+  min-width: 130px;
+}
