--- a/apps/app/views/main.html
+++ b/apps/app/views/main.html
@@ -1,1 +1,1 @@
-<leaflet center="kenya" tiles="tiles" geojson="geojson" controls="controls" legend="legend" width="840" height="780"></leaflet>
+<leaflet center="kenya" maxbounds="maxbounds" tiles="tiles" geojson="geojson" controls="controls" legend="legend" width="840" height="780"></leaflet>
