--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -395,3 +395,42 @@ a.thumbnail:focus img {
   font-size: 18px;
 }
 
+/* ===== Map ===== */
+
+.browsehappy {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+.legend {
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: rgba(255,255,255, 0.9);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 6px 8px;
+  line-height: 18px;
+  color: #555;
+  min-width: 130px;
+
+  i {
+    width: 16px;
+    height: 16px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+  }
+}
+
+hover-info.leaflet-control {
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: rgba(255,255,255, 0.9);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 6px 8px;
+  line-height: 18px;
+  color: #555;
+  min-width: 130px;
+}
+
