--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5104,13 +5104,16 @@ button.close {
     color: #888;
     width: 227px;
     height: 100px; }
+    .services ul li span {
+      font-size: 40px;
+      display: block; }
     .services ul li:hover {
       width: 328px !important;
       background: #69D2E7;
       cursor: pointer;
       color: #FFF;
       text-align: left; }
-      .services ul li:hover i {
+      .services ul li:hover span {
         float: left;
         line-height: 60px;
         margin: 0 20px 0 5px; }
