Fix the last updates partners tab.

--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5475,3 +5475,16 @@ footer {
       transition: color 0.1s;
       -webkit-transition: color 0.1s;
       -moz-transition: color 0.1s; }
+
+.media:first-child {
+  margin: 0; }
+
+.media-object {
+  height: 118px;
+  width: 168px; }
+
+.media {
+  margin-top: 0px;
+  overflow: inherit; }
+  .media .media {
+    margin-top: 15px; }
