Change the style and add a image.

--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -163,3 +163,19 @@ footer {
 }
 
 
+.media {
+  margin-top: 0px;
+  overflow: inherit;
+
+  .media {
+    margin-top: 15px;
+  }
+}
+
+#what-is-ibli-image {
+  background: url(../images/what_is_ibli.png) no-repeat;
+  width: 960px;
+  height: 212px;
+  margin-top: 5px;
+  margin-bottom: 36px;
+}
