--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -172,10 +172,13 @@ footer {
   }
 }
 
-#what-is-ibli-image {
-  background: url(../images/what_is_ibli.png) no-repeat;
-  width: 960px;
-  height: 212px;
-  margin-top: 5px;
-  margin-bottom: 36px;
+#what-is-ibli {
+
+  #what-is-ibli-image {
+    background: url(../images/what_is_ibli.png) no-repeat;
+    width: 960px;
+    height: 212px;
+    margin-top: 5px;
+    margin-bottom: 36px;
+  }
 }
