--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -161,4 +161,19 @@ footer {
   }
 }
 
+#partners {
 
+  .media:first-child {
+     margin: 0;
+  }
+
+  .media-object {
+    height: 88px;
+    width: 136px;
+  }
+
+  .media {
+    margin-top: 0px;
+    overflow: inherit;
+  }
+}
