Change the color.

--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5488,3 +5488,6 @@ footer {
   height: 212px;
   margin-top: 5px;
   margin-bottom: 36px; }
+#what-is-ibli .lead {
+  font-weight: normal;
+  color: #515151; }
