--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -181,4 +181,9 @@ footer {
     margin-top: 5px;
     margin-bottom: 36px;
   }
+
+  .lead {
+    font-weight: normal;
+    color: #515151;
+  }
 }
