--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5091,9 +5091,6 @@ button.close {
 .services ul {
   padding: 0; }
   .services ul li {
-    transition: width 0.3s;
-    -webkit-transition: width 0.3s;
-    -moz-transition: width 0.3s;
     list-style-type: none;
     float: left;
     background: #eee;
@@ -5107,25 +5104,12 @@ button.close {
       font-size: 30px;
       display: block; }
     .services ul li:hover {
-      width: 328px !important;
-      background: #69D2E7;
-      cursor: pointer;
-      color: #FFF;
-      text-align: left; }
-      .services ul li:hover span {
-        float: left;
-        line-height: 60px;
-        margin: 0 20px 0 5px; }
-      .services ul li:hover p a {
-        visibility: visible;
-        color: #FFF; }
+      background: #69D2E7; }
     .services ul li p {
       overflow: hidden;
       white-space: nowrap; }
       .services ul li p a {
         visibility: hidden; }
-  .services ul:hover li {
-    width: 201px; }
 
 /* ===== Block header ===== */
 .block-header h2 {
