--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -384,6 +384,9 @@ a.thumbnail:focus img {
   padding: 10px;
   color: #333333;
 }
+.thumbnail .caption a {
+  color: #333333;
+}
 .thumbnail .caption h4{
   text-transform: uppercase;
 }
