--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -345,42 +345,45 @@ img.img-about {
 
 /* ===== Thumbnails ===== */
 
-.thumbnail {
-  padding: 0;
-  border: 0;
-  border-radius: 0;
-}
-.thumbnail > img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  padding: 10px;
-  border: 1px solid #eee;
-}
-a.thumbnail:hover img,
-a.thumbnail:focus img {
-  border-color: #ccc;
-}
-.thumbnail > img {
-  margin-left: auto;
-  margin-right: auto;
-}
-.thumbnail .caption {
-  padding: 10px;
-  color: #333333;
-}
-.thumbnail .caption a {
-  color: #333333;
-}
-.thumbnail .caption h4{
-  text-transform: uppercase;
-}
-.thumbnail .caption .rating {
-  margin-bottom: 10px;
-}
-.thumbnail .caption .rating i {
-  color: #F7C41F;
-  font-size: 18px;
+.ibli-on-the-ground {
+
+  .thumbnail {
+    padding: 0;
+    border: 0;
+    border-radius: 0;
+  }
+  .thumbnail > img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    padding: 10px;
+    border: 1px solid #eee;
+  }
+  a.thumbnail:hover img,
+  a.thumbnail:focus img {
+    border-color: #ccc;
+  }
+  .thumbnail > img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .thumbnail .caption {
+    padding: 10px;
+    color: #333333;
+  }
+  .thumbnail .caption a {
+    color: #333333;
+  }
+  .thumbnail .caption h4{
+    text-transform: uppercase;
+  }
+  .thumbnail .caption .rating {
+    margin-bottom: 10px;
+  }
+  .thumbnail .caption .rating i {
+    color: #F7C41F;
+    font-size: 18px;
+  }
 }
 
 /* ===== Map ===== */
