--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -465,3 +465,11 @@ fieldset[disabled] .btn-amethyst.active {
   background-color: #BB8ECD;
   border-color: #BB8ECD;
 }
+
+.top-zero {
+  margin-top: 0;
+}
+
+.main-container {
+  margin-top: 20px;
+}
