--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5007,6 +5007,8 @@ body.front {
   /* ===== Recent Works ===== */
   /* ===== Thumbnails ===== */
   /* ===== Map ===== */ }
+  body.front .main-container {
+    margin-top: 0; }
   body.front #wrap,
   body.front #hp-slider {
     height: 480px;
@@ -5684,3 +5686,9 @@ fieldset[disabled] .btn-amethyst:active,
 fieldset[disabled] .btn-amethyst.active {
   background-color: #BB8ECD;
   border-color: #BB8ECD; }
+
+.top-zero {
+  margin-top: 0; }
+
+.main-container {
+  margin-top: 20px; }
