--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5467,3 +5467,8 @@ footer {
 #partners .media {
   margin-top: 0px;
   overflow: inherit; }
+
+#news {
+  overflow: auto;
+  width: 360px;
+  height: 360px; }
