--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5467,3 +5467,13 @@ footer {
 #partners .media {
   margin-top: 0px;
   overflow: inherit; }
+
+#home-page-video {
+  height: 315px;
+  width: 560px;
+  padding-left: 5px;
+  float: right; }
+
+#ibli-hom-page-paragraph {
+  display: inline;
+  overflow: hidden; }
