--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -177,3 +177,16 @@ footer {
     overflow: inherit;
   }
 }
+
+#home-page-video {
+  height: 315px;
+  width: 560px;
+  padding-left: 5px;
+  float: right;
+
+}
+
+#ibli-hom-page-paragraph {
+  display: inline;
+  overflow: hidden;
+}
