--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -434,3 +434,19 @@ img.img-about {
     }
   }
 }
+
+/* =====Youtube video section=====*/
+
+
+#home-page-video {
+  height: 315px;
+  width: 560px;
+  padding-left: 5px;
+  float: right;
+
+}
+
+#ibli-hom-page-paragraph {
+  display: inline;
+  overflow: hidden;
+}
