--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5088,10 +5088,9 @@ body.front {
   body.front .delay {
     -webkit-animation-delay: 0.5s;
     -moz-animation-delay: 0.5s; }
-  body.front .services ul {
-    padding: 0; }
-    body.front .services ul li {
-      list-style-type: none;
+  body.front .services {
+    margin-top: 10px; }
+    body.front .services a {
       float: left;
       background: #eee;
       padding: 20px;
@@ -5099,19 +5098,18 @@ body.front {
       text-align: center;
       color: #888;
       width: 227px;
-      height: 100px; }
-      body.front .services ul li span {
-        font-size: 30px;
-        display: block; }
-      body.front .services ul li:hover {
+      height: 100px;
+      text-decoration: none; }
+      body.front .services a:hover {
         background: #69D2E7;
         color: #FFF;
         cursor: pointer; }
-      body.front .services ul li p {
+      body.front .services a span.fa {
+        font-size: 30px;
+        display: block; }
+      body.front .services a span.text {
         overflow: hidden;
         white-space: nowrap; }
-        body.front .services ul li p a {
-          visibility: hidden; }
   body.front .block-header h2 {
     margin: 40px 0;
     font-size: 24px;
