--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5310,21 +5310,36 @@ body.node-type-page .what-is-ibli .main-image {
 body.node-type-page .what-is-ibli .buttons {
   margin-top: 20px; }
 
+body.page-publications .publications-list > ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0; }
+  body.page-publications .publications-list > ul > li {
+    padding: 15px;
+    border-bottom: 1px solid #EEE; }
+    body.page-publications .publications-list > ul > li:first-child {
+      border-top: 1px solid #EEE; }
+    body.page-publications .publications-list > ul > li:hover {
+      background: #f5f5f5; }
+
 /* ===== General ===== */
 html, body {
   font-family: 'Lato', sans-serif;
   height: 100%; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif; }
-
-h1.hl, h2.hl, h3.hl, h4.hl, h5.hl, h6.hl {
+  font-family: 'Lato', sans-serif;
   color: #515151;
   font-weight: 300;
   text-transform: uppercase; }
 
 h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
   text-transform: none; }
+
+h2.page-header {
+  border-bottom: 0 none;
+  margin: 0 0 5px 0;
+  padding-bottom: 20px; }
 
 /* ===== Top Menu ===== */
 header.navbar {
