--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -435,18 +435,12 @@ img.img-about {
   }
 }
 
-/* =====Youtube video section=====*/
+/* ===== Homepage Welcome =====*/
 
+.homepage-welcome {
 
-#home-page-video {
-  height: 315px;
-  width: 560px;
-  padding-left: 5px;
-  float: right;
-
-}
-
-#ibli-hom-page-paragraph {
-  display: inline;
-  overflow: hidden;
+  iframe {
+    margin-left: 5px;
+    float: right;
+  }
 }
