--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5357,16 +5357,10 @@ img.img-about {
       color: #555;
       min-width: 130px; }
 
-/* =====Youtube video section=====*/
-#home-page-video {
-  height: 315px;
-  width: 560px;
-  padding-left: 5px;
+/* ===== Homepage Welcome =====*/
+.homepage-welcome iframe {
+  margin-left: 5px;
   float: right; }
-
-#ibli-hom-page-paragraph {
-  display: inline;
-  overflow: hidden; }
 
 /* ===== General ===== */
 html, body {
