--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -439,3 +439,13 @@ body.front {
     }
   }
 }
+
+/*==== Nav bar ====*/
+
+.navbar-default {
+
+  .navbar-brand {
+    color: #ffffff;
+    font-size: 28px;
+  }
+}
