--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5303,6 +5303,11 @@ body.front {
         color: #555;
         min-width: 130px; }
 
+/*==== Nav bar ====*/
+.navbar-default .navbar-brand {
+  color: #ffffff;
+  font-size: 28px; }
+
 body.node-type-page .what-is-ibli .main-image {
   background: url(../images/what_is_ibli.png) no-repeat;
   width: 960px;
