--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5088,10 +5088,9 @@ body.front {
   body.front .delay {
     -webkit-animation-delay: 0.5s;
     -moz-animation-delay: 0.5s; }
-  body.front .services ul {
-    padding: 0; }
-    body.front .services ul li {
-      list-style-type: none;
+  body.front .services {
+    margin-top: 10px; }
+    body.front .services a {
       float: left;
       background: #eee;
       padding: 20px;
@@ -5099,19 +5098,18 @@ body.front {
       text-align: center;
       color: #888;
       width: 227px;
-      height: 100px; }
-      body.front .services ul li span {
-        font-size: 30px;
-        display: block; }
-      body.front .services ul li:hover {
+      height: 100px;
+      text-decoration: none; }
+      body.front .services a:hover {
         background: #69D2E7;
         color: #FFF;
         cursor: pointer; }
-      body.front .services ul li p {
+      body.front .services a span.fa {
+        font-size: 30px;
+        display: block; }
+      body.front .services a span.text {
         overflow: hidden;
         white-space: nowrap; }
-        body.front .services ul li p a {
-          visibility: hidden; }
   body.front .block-header h2 {
     margin: 40px 0;
     font-size: 24px;
@@ -5312,21 +5310,36 @@ body.node-type-page .what-is-ibli .main-image {
 body.node-type-page .what-is-ibli .buttons {
   margin-top: 20px; }
 
+body.page-publications .publications-list > ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0; }
+  body.page-publications .publications-list > ul > li {
+    padding: 15px;
+    border-bottom: 1px solid #EEE; }
+    body.page-publications .publications-list > ul > li:first-child {
+      border-top: 1px solid #EEE; }
+    body.page-publications .publications-list > ul > li:hover {
+      background: #f5f5f5; }
+
 /* ===== General ===== */
 html, body {
   font-family: 'Lato', sans-serif;
   height: 100%; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif; }
-
-h1.hl, h2.hl, h3.hl, h4.hl, h5.hl, h6.hl {
+  font-family: 'Lato', sans-serif;
   color: #515151;
   font-weight: 300;
   text-transform: uppercase; }
 
 h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
   text-transform: none; }
+
+h2.page-header {
+  border-bottom: 0 none;
+  margin: 0 0 5px 0;
+  padding-bottom: 20px; }
 
 /* ===== Top Menu ===== */
 header.navbar {
