--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5328,18 +5328,21 @@ html, body {
   height: 100%; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif;
-  color: #515151;
-  font-weight: 300;
-  text-transform: uppercase; }
+  font-family: 'Lato', sans-serif; }
 
 h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
   text-transform: none; }
 
-h2.page-header {
-  border-bottom: 0 none;
-  margin: 0 0 5px 0;
-  padding-bottom: 20px; }
+.main-container {
+  margin-top: 20px; }
+  .main-container h1, .main-container h2, .main-container h3, .main-container h4, .main-container h5, .main-container h6 {
+    color: #515151;
+    font-weight: 300;
+    text-transform: uppercase; }
+  .main-container h2.page-header {
+    border-bottom: 0 none;
+    margin: 0 0 5px 0;
+    padding-bottom: 20px; }
 
 /* ===== Top Menu ===== */
 header.navbar {
@@ -5711,6 +5714,3 @@ fieldset[disabled] .btn-amethyst.active {
 
 .top-zero {
   margin-top: 0; }
-
-.main-container {
-  margin-top: 20px; }
