--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -10,20 +10,29 @@ html, body {
   font-family: 'Lato', sans-serif;
   height: 100%;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
-  color: #515151;
-  font-weight: 300;
-  text-transform: uppercase;
 }
+
 h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
   text-transform: none;
 }
 
-h2.page-header {
-  border-bottom: 0 none;
-  margin: 0 0 5px 0;
-  padding-bottom: 20px;
+.main-container {
+  margin-top: 20px;
+
+  h1, h2, h3, h4, h5, h6 {
+    color: #515151;
+    font-weight: 300;
+    text-transform: uppercase;
+  }
+
+  h2.page-header {
+    border-bottom: 0 none;
+    margin: 0 0 5px 0;
+    padding-bottom: 20px;
+  }
 }
 
 /* ===== Top Menu ===== */
@@ -474,8 +483,4 @@ fieldset[disabled] .btn-amethyst.active {
 
 .top-zero {
   margin-top: 0;
-}
-
-.main-container {
-  margin-top: 20px;
 }
